# warmot

./: Cargo.toml
cli/: cargo.toml
cli/src/: main.rs
core/: cargo.toml
core/src/: copernicus.rs  jp2_convert.rs  lib.rs
src/: copernicus.rs  jp2_convert.rs  main.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: index.html  main.js  style.css
ui/src-tauri/: cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs  state.rs
ui/src-tauri/src/commands/: ais.rs  mod.rs  sentinel1.rs  sentinel2.rs  weather.rs
ui/src/scripts/: log.js
ui/src/tabs/: ais.js  sentinel1.js  sentinel2.js  weather.js
